tests/fixtures/invalid/import_cycle_a.pi
# Ciclo de imports: A importa B
project cycle_a
   import cycle_b

task main
   goal do something
